# RedundantScopeChecker

./: .gitignore  CMakeLists.txt  README.md  RedundantScopeChecker.cc  rcs_opt.sh  setup.sh  todo.md
samples/: 3_warnings.cpp  attribute_example.cpp  call_ctors.cpp  calls_vector_init.cpp  from_statement.c  no_warnings.c  simple_test.c  static_field.cpp  test.cpp  test2.c  test2.cpp  test3.c
samples/extern_test/: exporter.cpp  importer.cpp
